Updated the package name to include the code.gov organization on npm and changed the version to 0.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "code-gov-integrations",
-  "version": "1.0.0",
+  "name": "@code.gov/code-gov-integrations",
+  "version": "0.1.0",
   "description": "Package for third party integrations being used by code.gov and its projects",
   "main": "index.js",
   "scripts": {
