--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Package for third party integrations being used by code.gov and its projects",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin nyc tests"
+    "test": "./node_modules/.bin/nyc mocha tests"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "chai": "^4.1.2",
     "eslint": "^5.4.0",
     "mocha": "^5.2.0",
+    "nock": "^9.6.1",
     "nyc": "^12.0.2"
   },
   "dependencies": {
