--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
           command: |
              ./cc-test-reporter after-build -t lcov --exit-code $?
       - store_test_results:
-          path: test-results.xml
+          path: test-results
       - store_artifacts:
           path: coverage
           prefix: coverage
