--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
     "lint-fix": "./node_modules/.bin/eslint --fix .",
-    "test": "./node_modules/.bin/nyc mocha --reporter xunit --reporter-options output=test-results/mocha/results.xml tests"
+    "test": "./node_modules/.bin/nyc mocha --reporter xunit --reporter-options output=test-results/mocha/results.xml tests",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
