--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/GSA/code-gov-integrations#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^5.4.0",
     "eslint-plugin-mocha": "^5.2.0",
     "mocha": "^5.2.0",
