--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nyc": "^13.3.0"
   },
   "dependencies": {
+    "@octokit/plugin-throttling": "^2.4.0",
     "@octokit/rest": "^16.16.5"
   }
 }
